[WFLY-11896] Improve ability of mixed-domain testsuite to deal with different JVMs
MisxedDomainTestSupport will trigger caller (i.e a TestSuite) being ignored if the version under test can't handle the JVMs on offer.

Test jobs can be configured with different java home paths for different JVMs. If this is done MixedDomainTestSupport will try and use an appropriate one for the legacy host.

--- a/testsuite/mixed-domain/pom.xml
+++ b/testsuite/mixed-domain/pom.xml
@@ -199,8 +199,28 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <systemPropertyVariables>
-                                <jboss.test.host.slave.jvmhome>${java8.home}</jboss.test.host.slave.jvmhome>
-                                <jboss.test.host.slave.controller.jvmhome>${java8.home}</jboss.test.host.slave.controller.jvmhome>
+                                <jboss.test.legacy.host.java8.home>${java8.home}</jboss.test.legacy.host.java8.home>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>legacy-slave-java11-home</id>
+            <activation>
+                <jdk>[12,)</jdk>
+                <property>
+                    <name>java11.home</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <jboss.test.legacy.host.java11.home>${java11.home}</jboss.test.legacy.host.java11.home>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
